ADD_SUBDIRECTORY(5point)
ADD_SUBDIRECTORY(ann_1.1_char)
ADD_SUBDIRECTORY(imagelib)
ADD_SUBDIRECTORY(matrix)
ADD_SUBDIRECTORY(sba-1.5)
ADD_SUBDIRECTORY(sfm-driver)
#ADD_SUBDIRECTORY(zlib)
#ADD_SUBDIRECTORY(cblas)
ADD_SUBDIRECTORY(getopt)

IF(WIN32)
    ADD_SUBDIRECTORY(zlib)
    ADD_SUBDIRECTORY(cblas)
    ADD_SUBDIRECTORY(getopt)
    ADD_SUBDIRECTORY(f2c)
    ADD_SUBDIRECTORY(cminpack)
    ADD_SUBDIRECTORY(clapack)
    ADD_SUBDIRECTORY(jpeg)
ELSE(WIN32)
    #ADD_SUBDIRECTORY(cminpack)
ENDIF(WIN32)

